# unriddle-discharge-agent

./: .env.example  .gitignore  Dockerfile  README.md  SUBMISSION.md  SUBMIT.md  docker-compose.yml  pyproject.toml  requirements.txt  run_streamlit.bat
app/: __init__.py
app/agents/: __init__.py  auditor.py  discharge_agent.py  draft_builder.py  narrative_agent.py  narrative_synthesizer.py  planner.py
app/evaluation/: evaluation_runner.py  metrics.py  simulated_doctor.py  summary_rubric.py
app/llm/: __init__.py  anthropic_provider.py  azure_provider.py  base_provider.py  config_loader.py  gemini_provider.py  huggingface_provider.py  mock_provider.py  ollama_provider.py  openai_provider.py  provider_factory.py
app/memory/: __init__.py  correction_memory.py
app/models/: __init__.py  agent_state.py  constants.py  evidence.py  summary_models.py
app/observability/: trace_writer.py
app/tools/: __init__.py  conflict_detector.py  escalation_tool.py  field_extractor.py  interaction_checker.py  medication_reconciliation.py  missing_data_detector.py  pdf_reader.py  pending_result_detector.py  tool_registry.py
app/ui/: streamlit_app.py  upload_utils.py
config/: config.yaml
fixtures/: README.md
fixtures/patient_folders/: manifest.json
fixtures/patient_real/: README.md
outputs/: feature_test_report.json  submission_manifest.json
scripts/: evaluate_summary_quality.py  generate_feature_fixtures.py  run_feature_tests.py  run_real_patient_test.py  run_submission_batch.py  validate_assignment_outputs.py
tests/: conftest.py  helpers.py
(+406 files in other folders)
